# FIT_Projekty

./: README.md
IDS/part2/: xmachy02_xklink01.sql
IDS/part3/: xmachy02_xklink01.sql
IDS/part45/: xmachy02_xklink01.sql
IJC/: hodnoceni.md
IJC/DU1/: Makefile  bitset.c  bitset.h  erastothenes.c  erastothenes.h  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c
IJC/DU2/: Makefile  htab.h  htab_bucket_count.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_lookup_add.c  htab_move.c  htab_priv.h  htab_size.c  io.c  io.h  tail.c  wordcount.c
IMP/Meteostanice/: display_imgs.h  main.c
IMP/Meteostanice-doc/: doc.tex
IMS/CA/: CMakeLists.txt  Makefile
IMS/CA/doc/src/: doc.tex
IMS/CA/doc/src/bib/: refs.bib
IMS/CA/doc/src/code/: eca.cpp
IMS/CA/doc/src/sections/: architecture.tex  conception.tex  end.tex  experiment.tex  intro.tex  tech.tex
IMS/CA/src/: CMakeLists.txt
IMS/CA/src/model/: CMakeLists.txt  elementary.cpp  elementary.h  langton_ant_model.cpp  langton_ant_model.h  model_i.h  utils.h  utils.hpp
IMS/CA/src/visualization/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
IMS/CA/src/visualization/gui/: gui.cpp  gui.h  img_export.cpp  img_export.h  rgb.cpp  rgb.h  stepper_i.h  window_data.cpp  window_data.h
IMS/CA/src/visualization/models_wrap/: elementary_ca_wrapper.cpp  elementary_ca_wrapper.h  langton_ant_wrapper.cpp  langton_ant_wrapper.h
INC/projekt/: fsm.drawio  hdc.vhd  uart.vhd  uart_fsm.vhd  xuart.vhd  xuart_fsm.vhd
INP/projekt_2/: xmachy02.s  xmachy02_0.s  (+2 more)
IZV/03/: doc.py  (+2 more)
(+192 files in other folders)
